# raycaster

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: float2.cpp  float2.hpp  input.hpp  main.cpp  map.cpp  map.hpp  map_1.cpp  map_1.hpp  map_types.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  texture_types.hpp  window.hpp
src/linux/: input.cpp  window.cpp
src/windows/: input.cpp  window.cpp
